fixed code overflow for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -335,6 +335,7 @@ footer {
   background-color:  #272822;
   /* light pink background-color: #f2efef;*/
   line-height: 1;
+  overflow: auto;
 }
 
 .highlight code {
